--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                             <li><a href="faq.html">FAQ</a></li>
                         </ul>
                     </nav>
-                    <a href="#" class="client-area">Client Area</a>
+                    <a href="login.html" class="client-area">Client Area</a>
                 </div>
             </header>
     </header>
@@ -32,9 +32,7 @@
                 <h2>BOOST YOUR TRADING SKILLS</h2>
                 <a href="#" class="cta-button">TAKE OUR CHALLENGE</a>
             </div>
-            <div class="hero-image">
-                <img src="astronaut1.jpg" alt="Astronaut Image">
-            </div>
+            
         </section>
         <section class="info">
             <h3>WE HAVE CREATED UNIQUE TRADING EXPERIENCES FOR EVERYONE</h3>
@@ -44,7 +42,7 @@
             <p>
                 Upon completing of the evaluation process, the trade can receive a balance of <span>UP TO 300,000 USD</span> in virtual funds to trade and prosper.
             </p>
-            <img src="astronaut2.jpg" alt="Astronaut Image">
+            
         </section>
     </main>
 </body>
