--- a/login.html
+++ b/login.html
@@ -5,6 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
+    <header>
+    
+        <nav>
+            <div class='container'>
+                <h1><a href="index.html">BOOSTFX</a></h1>
+            <ul>
+                
+                <li><a href="partners.html">Partners</a></li>
+                <li><a href="community.html">Community</a></li>
+                <li><a href="faq.html">FAQs</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul></div>
+        </nav>
+    </div>
+    <button class="dashboard">Dashboard</button>
+</header>
 </head>
 <body>
     <div class="login-container">
