--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero">
             <div class="hero-content">
                 <h2>BOOST YOUR TRADING SKILLS</h2>
-                <a href="#" class="cta-button">TAKE OUR CHALLENGE</a>
+                <a href="pricing.html" class="cta-button">TAKE OUR CHALLENGE</a>
             </div>
             
         </section>
