added pricing coluum

--- a/pricing.html
+++ b/pricing.html
@@ -18,6 +18,20 @@
             <span>300K</span>
         </div>
         <div class="pricing-table">
+            <div class="pricing-table">
+                <div class="labels">
+                    <div class="item">Trading Period</div>
+                    <div class="item">Minimum Trading Days</div>
+                    <div class="item">Trading Leverage</div>
+                    <div class="item">Maximum Daily Loss</div>
+                    <div class="item">Maximum Overall Loss</div>
+                    <div class="item">Virtual Profit Target</div>
+                    <div class="item">Weekend Holding</div>
+                    <div class="item">News Trading</div>
+                    <div class="item">First Withdrawal</div>
+                    <div class="item">Profit Split</div>
+                    <div class="item">Challenge Fee</div>
+                </div>  
             <div class="column phase1">
                 <div class="title">PHASE 1</div>
                 <div class="item">Challenge</div>
