--- a/pricing.html
+++ b/pricing.html
@@ -18,7 +18,7 @@
             <span>300K</span>
         </div>
         <div class="pricing-table">
-            <div class="labels">
+            <div class="column labels">
                 <div class="item">Trading Period</div>
                 <div class="item">Minimum Trading Days</div>
                 <div class="item">Trading Leverage</div>
@@ -35,13 +35,14 @@
                 <div class="title">PHASE 1</div>
                 <div class="item">Unlimited</div>
                 <div class="item">5 Days</div>
+                <div class="item">N/A</div>
                 <div class="item">$250 / 5%</div>
                 <div class="item">$500 / 10%</div>
                 <div class="item">$400 / 8%</div>
                 <div class="item">No</div>
                 <div class="item">Yes</div>
-                <div class="item">X</div>
-                <div class="item">X</div>
+                <div class="item">N/A</div>
+                <div class="item">N/A</div>
                 <div class="item">$79</div>
             </div>
             <div class="column phase2">
@@ -54,27 +55,12 @@
                 <div class="item">$250 / 5%</div>
                 <div class="item">No</div>
                 <div class="item">Yes</div>
-                <div class="item">X</div>
+                <div class="item">N/A</div>
                 <div class="item">Free</div>
             </div>
             <div class="column phase3">
                 <div class="title">PHASE 3</div>
                 <div class="item">Indefinite</div>
                 <div class="item">5 Days</div>
-                <div class="item">1:100 Maximum Leverage</div>
-                <div class="item">$250 / 5%</div>
-                <div class="item">$500 / 10%</div>
-                <div class="item">X</div>
-                <div class="item">No</div>
-                <div class="item">No</div>
-                <div class="item">30 Days</div>
-                <div class="item">85% | 90% with Scaling</div>
-                <div class="item">Bonus</div>
-            </div>
-        </div>
-        <div class="buy-now">
-            <button>BUY NOW $79</button>
-        </div>
-    </div>
-</body>
-</html>
+                <div class="item">1:100 Maximum Lev
+
