--- a/pricing.html
+++ b/pricing.html
@@ -62,5 +62,20 @@
                 <div class="title">PHASE 3</div>
                 <div class="item">Indefinite</div>
                 <div class="item">5 Days</div>
-                <div class="item">1:100 Maximum Lev
-
+                <div class="item">1:100 Maximum Leverage</div>
+                <div class="item">$250 / 5%</div>
+                <div class="item">$500 / 10%</div>
+                <div class="item">N/A</div>
+                <div class="item">No</div>
+                <div class="item">No</div>
+                <div class="item">30 Days</div>
+                <div class="item">85% | 90% with Scaling</div>
+                <div class="item">Bonus</div>
+            </div>
+        </div>
+        <div class="buy-now">
+            <button>BUY NOW $79</button>
+        </div>
+    </div>
+</body>
+</html>
