--- a/pricing.html
+++ b/pricing.html
@@ -18,7 +18,7 @@
             <span>300K</span>
         </div>
         <div class="pricing-table">
-            <div class="column labels">
+            <div class="labels">
                 <div class="item">Trading Period</div>
                 <div class="item">Minimum Trading Days</div>
                 <div class="item">Trading Leverage</div>
@@ -35,14 +35,13 @@
                 <div class="title">PHASE 1</div>
                 <div class="item">Unlimited</div>
                 <div class="item">5 Days</div>
-                <div class="item">N/A</div>
                 <div class="item">$250 / 5%</div>
                 <div class="item">$500 / 10%</div>
                 <div class="item">$400 / 8%</div>
                 <div class="item">No</div>
                 <div class="item">Yes</div>
-                <div class="item">N/A</div>
-                <div class="item">N/A</div>
+                <div class="item">X</div>
+                <div class="item">X</div>
                 <div class="item">$79</div>
             </div>
             <div class="column phase2">
@@ -55,7 +54,7 @@
                 <div class="item">$250 / 5%</div>
                 <div class="item">No</div>
                 <div class="item">Yes</div>
-                <div class="item">N/A</div>
+                <div class="item">X</div>
                 <div class="item">Free</div>
             </div>
             <div class="column phase3">
@@ -65,7 +64,7 @@
                 <div class="item">1:100 Maximum Leverage</div>
                 <div class="item">$250 / 5%</div>
                 <div class="item">$500 / 10%</div>
-                <div class="item">N/A</div>
+                <div class="item">X</div>
                 <div class="item">No</div>
                 <div class="item">No</div>
                 <div class="item">30 Days</div>
