--- a/pricing.html
+++ b/pricing.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="buy-now">
-            <button>BUY NOW $79</button>
+            <button><a href=summary.html>BUY NOW $79</a></button>
         </div>
     </div>
 </body>
