--- a/summary.html
+++ b/summary.html
@@ -12,7 +12,7 @@
             <h2>Order Summary</h2>
             <div class="item">
                 <span>CHALLENGE TYPE</span>
-                <span>Rocket 21 Challenge</span>
+                <span>Boostfx challenge</span>
             </div>
             <div class="item">
                 <span>ACCOUNT SIZE</span>
