--- a/summary.html
+++ b/summary.html
@@ -6,7 +6,23 @@
     <link rel="stylesheet" href="summary.css">
     <title>Order Summary</title>
 </head>
+<header>
+    <div class="container">
+        <h1><a href="index.html">BOOSTFX</a></h1>
+        <nav>
+            <ul>
+                
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="partners.html">Partners</a></li>
+                <li><a href="community.html">Community</a></li>
+                <li><a href="faq.html">FAQ</a></li>
+            </ul>
+        </nav>
+        <a href="login.html" class="client-area">Client Area</a>
+    </div>
+</header>
 <body>
+    
     <div class="ordersummarycontainer">
         <div class="ordersummary">
             <h2>Order Summary</h2>
