--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </div>
-    <button class="client-area">Client Area</button>
+    <button class="client-area"><a href=login.html></a>client Area</button>
 </header>
 
 <div class="contact-content">
@@ -44,14 +44,14 @@
     <div class="footer-content">
         
         <div class="contact-info">
-            <p><a href="mailto:support21@rocket21challenge.com">support@boostfx.com</a></p>
+            <p><a href="mailto:support@boostfx.com">support@boostfx.com</a></p>
             <p>12345678</p>
         </div>
         <div class="footer-nav">
             <div class="categories">
                 <h4>CATEGORIES</h4>
                 <ul>
-                    <li><a href="#">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
             <div class="legal">
