--- a/faq.html
+++ b/faq.html
@@ -22,18 +22,18 @@
             </ul></div>
         </nav>
     </div>
-    <button class="dashboard">Dashboard</button>
+    <button class="dashboard"><a href=login.html></a>client-area</button>
 </header>
 
 <div class="faq-content">
     <h1>Frequently Asked Questions</h1>
     <div class="tabs">
         <button class="tab-button active">Getting Started</button>
-        <button class="tab-button">R21 Simulated Funded Account</button>
+        <button class="tab-button">boostfx Simulated Funded Account</button>
         <button class="tab-button">Payouts</button>
         <button class="tab-button">General Rules</button>
-        <button class="tab-button">Apollo 11 Challenge Rules</button>
-        <button class="tab-button">Dashboard</button>
+        <button class="tab-button">boostfxChallenge Rules</button>
+       
     </div>
     <div class="faq-section">
         <h2>How Do I Get Started?</h2>
