--- a/summary.html
+++ b/summary.html
@@ -51,7 +51,7 @@
                 <input type="text" id="coupon">
                 <button class="verifybutton">VERIFY</button>
             </div>
-            <button class="completeorderbutton">COMPLETE ORDER</button>
+            <button class="completeorderbutton"><a href=summary.html>COMPLETE ORDER</a></button>
         </div>
     </div>
 </body>
