--- a/payment.html
+++ b/payment.html
@@ -16,7 +16,7 @@
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="partners.html">Partners</a></li>
                         <li><a href="community.html">Community</a></li>
-                            li><a href="faq.html">FAQ</a></li>
+                        <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </nav>
                 <a href="login.html" class="client-area">Client Area</a>
