--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
 </header>
 
 <div class="contact-content">
-    <p>For New Platform Support Related To Challenge Purchases After May 14th 2024 Contact <a href="mailto:support21@rocket21challenge.com">support21@rocket21challenge.com</a></p>
+    <p>For New Platform Support Related To Challenge Purchases After May 14th 2024 Contact <a href="mailto:support@BoostFX.com">Boostfx@challenge.com</a></p>
     <form action="submit_form.php" method="post">
         <input type="text" name="name" placeholder="Your Name">
         <input type="email" name="email" placeholder="Your Email">
