--- a/submit.html
+++ b/submit.html
@@ -39,6 +39,9 @@
         <button type="submit"><a href="submit.html">Submit</a></button>
     </form>
 </div>
+<div class="message-box">
+    Thank you for your message. It has been sent.
+</div>
 
 <footer>
     <div class="footer-content">
