--- a/submit.html
+++ b/submit.html
@@ -36,7 +36,7 @@
         <input type="text" name="account" placeholder="Trading Account Number">
         <input type="text" name="subject" placeholder="Subject">
         <textarea name="description" placeholder="Description"></textarea>
-        <button type="submit"><a href="submit.html">Submit</a></button>
+        <button type="submit"><a href=submit.html>Submit</a></button>
     </form>
 </div>
 <div class="message-box">
