--- a/submit.html
+++ b/submit.html
@@ -30,18 +30,18 @@
 
 <div class="contact-content">
     <p>For New Platform Support Related To Challenge Purchases After May 14th 2024 Contact <a href="mailto:support@BoostFX.com">Boostfx@challenge.com</a></p>
-    <form action="submit.html" method="post">
+    <form action="submit_form.php" method="post">
         <input type="text" name="name" placeholder="Your Name">
         <input type="email" name="email" placeholder="Your Email">
         <input type="text" name="account" placeholder="Trading Account Number">
         <input type="text" name="subject" placeholder="Subject">
         <textarea name="description" placeholder="Description"></textarea>
-        <button type="submit"><a href=submit.html>Submit</a></button>
+        <button type="submit"><a href="submit.html">Submit</a></button>
     </form>
 </div>
 <div class="message-box">
-    Thank you for your message. It has been sent.
-</div>
+        Thank you for your message. It has been sent.
+    </div>
 
 <footer>
     <div class="footer-content">
