--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
         <input type="text" name="account" placeholder="Trading Account Number">
         <input type="text" name="subject" placeholder="Subject">
         <textarea name="description" placeholder="Description"></textarea>
-        <button type="submit"><a href="submit.html"></a>Submit</button>
+        <button> <a href="submit.html"></a>Submit</button>
     </form>
 </div>
 
