--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
     <button class="client-area"><a href=login.html></a>client Area</button>
 </header>
 
-<div class="contact-content">
+<div class="contactcontent">
     <p>For New Platform Support Related To Challenge Purchases After May 14th 2024 Contact <a href="mailto:support@BoostFX.com">Boostfx@challenge.com</a></p>
     <form action="submit.html" method="post">
         <input type="text" name="name" placeholder="Your Name">
@@ -42,13 +42,13 @@
 </div>
 
 <footer>
-    <div class="footer-content">
+    <div class="footerContent">
         
-        <div class="contact-info">
+        <div class="contactinfo">
             <p><a href="mailto:support@boostfx.com">support@boostfx.com</a></p>
             <p>12345678</p>
         </div>
-        <div class="footer-nav">
+        <div class="footernav">
             <div class="categories">
                 <h4>CATEGORIES</h4>
                 <ul>
