--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <input type="text" name="subject" placeholder="Subject">
         <textarea name="description" placeholder="Description"></textarea>
     </form>
-        <button id="submitbutton">submit</button>
+        <button id="submitbutton"><a href="submit.html">submit</a></button>
         <div id="thankyoumessage">Thank you for your message. It has been sent.</div>
     
         <script>
