--- a/contact.html
+++ b/contact.html
@@ -41,8 +41,8 @@
         <div id="thankyoumessage">Thank you for your message. It has been sent.</div>
     
         <script>
-            document.getElementById('sendButton').addEventListener('click', function() {
-                document.getElementById('thankYouMessage').style.display = 'block';
+            document.getElementById('submitbutton').addEventListener('click', function() {
+                document.getElementById('thankyoumessage').style.display = 'block';
             });
         </script>
         
