--- a/payment.html
+++ b/payment.html
@@ -79,7 +79,7 @@
                             <label><input type="checkbox" required> I have read and agree to the website Privacy Policy *</label>
                             <label><input type="checkbox" required> I have read and agree to the website Schedule of Assessment *</label>
                         </div>
-                        <button type="submit"><a href="completedpayment.html">Place order</a></button>
+                        <button><a href="completedpayment.html">Place order</a></button>
                     </form>
                 </div>
                 <div class="ordersummary">
