--- a/community.html
+++ b/community.html
@@ -42,18 +42,18 @@
         <div class="profile">
             <img src="profile1.png" alt="Alex Gonzales">
             <h3>Alex</h3>
-            <p>Alex  also known as Forexjse has an incredible success story, to where he always says his success came from his first payout on a funding company where it shifted his trading 180% period.</p>
+            <p> Alex  also known as Forexjse has an incredible success story, to where he always says his success came from his first payout on a funding company where it shifted his trading 180% period.</p>
             <p class="location">USA</p>
         </div>
         <div class="profile">
             <img src="profile2.png" alt="Sebastian Rodriguez">
             <h3>Sebastian </h3>
-            <p>Sebastian, has been trading for 5 years and has one of the biggest Spanish trading communities. Currently educating traders for free on his YouTube channel, "Wealthy Trades", where he mainly focuses on trading Order Blocks.</p>
+            <p> Sebastian, has been trading for 5 years and has one of the biggest Spanish trading communities. Currently educating traders for free on his YouTube channel, "Wealthy Trades", where he mainly focuses on trading Order Blocks.</p>
             <p class="location">Rep. Dominicana</p>
         </div>
         <div class="profile">
             <img src="profile3.png" alt="Mauricio Ceballos">
-            <h3>Mauricio Ceballos</h3>
+            <h3>Mauricio </h3>
             <p>Our English branch ambassador. At the age of 19 he decided to move to the U.S. and from being a bread delivery man he became a full time trader. Now he's making $120,000.00 on the Forex Market and helping thousands of people in the transition to become profitable.</p>
             <p class="location">Mexico</p>
         </div>
