--- a/community.html
+++ b/community.html
@@ -64,7 +64,7 @@
             <p class="location">USA</p>
         </div>
         <div class="profile">
-            <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.freepik.com%2Fpremium-vector%2Fhandsome-business-man-pointing-something-young-businessman-cartoon-character_18890172.htm&psig=AOvVaw0os2DIQ8JAVaJjTH8h9Dzt&ust=1722870100755000&source=images&cd=vfe&opi=89978449&ved=0CBEQjRxqFwoTCMDD4tLN24cDFQAAAAAdAAAAABAK">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/024/346/435/small_2x/3d-cartoon-businessman-on-transparent-background-generative-ai-png.png">
             <h3>Greg</h3>
             <p>Greg, is one of our Spanish ambassadors. Plugging the biggest electronic music festivals who got to know Trading through a colleague. Currently managing $800,000.00 of capital and helping over 1000 people on their Trading path.</p>
             <p class="location">Peru</p>
