--- a/community.html
+++ b/community.html
@@ -34,7 +34,7 @@
     <section class="ambassadors">
         <h1>Ambassadors</h1>
         <p class="introtext">The ambassadors of one of the most distinguished trading brands in the world are not just symbolic figures; they are wellsprings of wisdom and experience. With a rich background in trading, they are dedicated to sharing their knowledge, thereby strengthening the skill and confidence of emerging traders. Their role is pivotal, guiding and uplifting the next generation of financial leaders.</p>
-        <button class="joinbutton"><a href="https://discord.com/login"></a>Join Our Community</button>
+        <button class="joinbutton"><a href="https://discord.com/login">Join Our Community</a></button>
     </section>
 
    
