--- a/partners.html
+++ b/partners.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Community</title>
-    <link rel="stylesheet" href="community.css">
+    <link rel="stylesheet" href="partners.css">
 </head>
 <body>
 
