--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
             <ul>
                 
                 <li><a href="partners.html">Partners</a></li>
-                <li><a href="community.html">Community</a></li>
+                <li><a href="blogs.html">Blogs</a></li>
                 <li><a href="faq.html">FAQs</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul></div>
