--- a/payment.html
+++ b/payment.html
@@ -15,7 +15,7 @@
                             
                         <li><a href="contact.html">Contact</a></li>
                         <li><a href="partners.html">Partners</a></li>
-                        <li><a href="community.html">Community</a></li>
+                        <li><a href="blogs.html">Blogs</a></li>
                         <li><a href="faq.html">FAQ</a></li>
                     </ul>
                 </nav>
