--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </div>
-    <button class="client-area"><a href=login.html></a>client Area</button>
+    <button class="client-area"><a href=login.html>client Area</a></button>
 </header>
 
 <div class="contactcontent">
