--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
                     <input type="checkbox" id="remember-me" name="remember-me">
                     <label for="remember-me">Remember Me</label>
                 </div>
-                <button type="submit"><a href=mainpage.htmk>LOGIN</a></button>
+                <button type="submit"><a href=mainpage.html>LOGIN</a></button>
                 <a href="#" class="forgot-password">Lost your password?</a>
             </form>
         </div>
