--- a/mainpage.html
+++ b/mainpage.html
@@ -8,21 +8,20 @@
 </head>
 <body>
     <div class="container">
-        <!-- Sidebar -->
         <aside class="sidebar">
             <div class="profile">
-                <img src="profile.jpg" alt="Profile Picture">
-                <h2>Michael Cofer</h2>
+                <img src="https://cdn.vectorstock.com/i/1000v/30/15/young-happy-businessman-cartoon-flat-vector-18203015.jpg">
+                <h2>Bryan</h2>
             </div>
             <nav class="navmenu">
                 <ul>
-                    <li><a href="#">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="#">Dashboard</a></li>
                     <li><a href="#">Profile</a></li>
-                    <li><a href="#">FAQ</a></li>
+                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="#">Orders</a></li>
                     <li><a href="#">Withdrawals</a></li>
-                    <li><a href="#">Blog</a></li>
+                    <li><a href="blogs.html">Blog</a></li>
                     <li><a href="#">Affiliate Dashboard</a></li>
                     <li><a href="#">Leaderboard</a></li>
                     <li><a href="#">Competitions</a></li>
@@ -31,7 +30,7 @@
             </nav>
         </aside>
 
-        <!-- Main Content -->
+       
         <main class="maincontent">
             <header class="header">
                 <div class="headerleft">
@@ -47,8 +46,8 @@
             <section class="accountsection">
                 <div class="accountcard">
                     <div class="accountinfo">
-                        <h2>Account: 850281</h2>
-                        <p>Status: <span class="status">Passed</span> Equity: <span class="equity">$11,324.72</span> Period: 22 Aug 2023</p>
+                        <h2>Account: 12345678</h2>
+                        <p>Status: <span class="status">Passed</span> Equity: <span class="equity">$11,000.00</span> Period: 22 Aug 2023</p>
                     </div>
                     <div class="accountactions">
                         <button class="getcredentialsbtn">Get Credentials</button>
@@ -62,8 +61,8 @@
 
                 <div class="accountcard">
                     <div class="accountinfo">
-                        <h2>Account: 851039</h2>
-                        <p>Status: <span class="status">Passed</span> Equity: <span class="equity">$109,044.88</span> Period: 18 Sep 2023</p>
+                        <h2>Account: 23456789</h2>
+                        <p>Status: <span class="status">Passed</span> Equity: <span class="equity">$109,000.00</span> Period: 18 Sep 2023</p>
                     </div>
                     <div class="accountactions">
                         <button class="getcredentialsbtn">Get Credentials</button>
