--- a/mainpage.html
+++ b/mainpage.html
@@ -16,16 +16,12 @@
             <nav class="navmenu">
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="#">Dashboard</a></li>
-                    <li><a href="#">Profile</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                     <li><a href="faq.html">FAQ</a></li>
-                    <li><a href="#">Orders</a></li>
-                    <li><a href="#">Withdrawals</a></li>
+                    <li><a href="orders.html">Orders</a></li>
+                    <li><a href="withdrawals.html">Withdrawals</a></li>
                     <li><a href="blogs.html">Blog</a></li>
-                    <li><a href="#">Affiliate Dashboard</a></li>
-                    <li><a href="#">Leaderboard</a></li>
-                    <li><a href="#">Competitions</a></li>
-                    <li><a href="#">Logout</a></li>
+                    <li><a href="logout.html">Logout</a></li>
                 </ul>
             </nav>
         </aside>
@@ -39,7 +35,7 @@
                 </div>
                 <div class="headerright">
                     <button class="showallbtn">Show All</button>
-                    <button class="newchallengebtn">+ New Challenge</button>
+                    
                 </div>
             </header>
 
