--- a/mainpage.html
+++ b/mainpage.html
@@ -30,7 +30,7 @@
         <main class="maincontent">
             <header class="header">
                 <div class="headerleft">
-                    <h1>Home</h1>
+                    <h1>OVERVIEW</h1>
                     <p>Challenge Accounts</p>
                 </div>
                 <div class="headerright">
