--- a/mainpage.html
+++ b/mainpage.html
@@ -15,12 +15,10 @@
             </div>
             <nav class="navmenu">
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li><a href="mainpage.html">OVERVIEW</a></li>
                     <li><a href="profile.html">Profile</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="orders.html">Orders</a></li>
                     <li><a href="withdrawals.html">Withdrawals</a></li>
-                    <li><a href="blogs.html">Blog</a></li>
                     <li><a href="logout.html">Logout</a></li>
                 </ul>
             </nav>
