--- a/mainpage.html
+++ b/mainpage.html
@@ -15,7 +15,7 @@
             </div>
             <nav class="navmenu">
                 <ul>
-                    <li><a href="mainpage.html">OVERVIEW</a></li>
+                    <li><a href="mainpage.html">Overview</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li><a href="orders.html">Orders</a></li>
                     <li><a href="withdrawals.html">Withdrawals</a></li>
