--- a/orders.html
+++ b/orders.html
@@ -16,16 +16,10 @@
             </div>
             <nav class="navmenu">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
-                    <li><a href="dashboard.html">Dashboard</a></li>
+                    <li><a href="mainpage.html">Overview</a></li>
                     <li><a href="profile.html">Profile</a></li>
-                    <li><a href="faq.html">FAQ</a></li>
                     <li><a href="orders.html">Orders</a></li>
                     <li><a href="withdrawals.html">Withdrawals</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="affiliate_dashboard.html">Affiliate Dashboard</a></li>
-                    <li><a href="leaderboard.html">Leaderboard</a></li>
-                    <li><a href="competitions.html">Competitions</a></li>
                     <li><a href="logout.html">Logout</a></li>
                 </ul>
             </nav>
