--- a/profile.html
+++ b/profile.html
@@ -11,7 +11,7 @@
         
         <aside class="sidebar">
             <div class="profile">
-                <img src="profile.jpg" alt="Profile Picture">
+                <img src="https://cdn.vectorstock.com/i/1000v/30/15/young-happy-businessman-cartoon-flat-vector-18203015.jpg" alt="Profile Picture">
                 <h2>Bryan</h2>
             </div>
             <nav class="navmenu">
