--- a/logout.html
+++ b/logout.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket 21 - Competitions</title>
+    <title>Rocket 21 - Logout</title>
     <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
             </div>
             <nav class="navmenu">
                 <ul>
-                    <li><a href="mainpage.html">Overview</a></li>
+                    <li><a href="mainpage.html">Oveview</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li><a href="orders.html">Orders</a></li>
                     <li><a href="withdrawals.html">Withdrawals</a></li>
@@ -29,15 +29,16 @@
         <main class="maincontent">
             <header class="header">
                 <div class="headerleft">
-                    <h1>Competitions</h1>
-                    <p>Participate in ongoing competitions.</p>
+                    <h1>Logout</h1>
+                    <p>You have been logged out.</p>
                 </div>
             </header>
 
             <section class="contentsection">
-                <p>This is the competitions page content.</p>
+                <p>Thank you for using Rocket 21. See you soon!</p>
             </section>
         </main>
     </div>
 </body>
 </html>
+
