--- a/orders.html
+++ b/orders.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket 21 - Orders</title>
+    <title>BOOSTFX - Orders</title>
     <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
     <div class="container">
-        <!-- Sidebar -->
+        
         <aside class="sidebar">
             <div class="profile">
                 <img src="https://cdn.vectorstock.com/i/1000v/30/15/young-happy-businessman-cartoon-flat-vector-18203015.jpg" alt="Profile Picture">
-                <h2>Michael Cofer</h2>
+                <h2>Bryan</h2>
             </div>
             <nav class="navmenu">
                 <ul>
@@ -25,7 +25,7 @@
             </nav>
         </aside>
 
-        <!-- Main Content -->
+        
         <main class="maincontent">
             <header class="header">
                 <div class="headerleft">
