--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rocket 21 - Profile</title>
+    <title>BOOSTFX - Profile</title>
     <link rel="stylesheet" href="mainpage.css">
 </head>
 <body>
