--- a/withdrawals.html
+++ b/withdrawals.html
@@ -35,7 +35,7 @@
             </header>
 
             <section class="contentsection">
-                <p>This is the withdrawals page content.</p>
+                <p>No withdrawals made yet.</p>
             </section>
         </main>
     </div>
