--- a/logout.html
+++ b/logout.html
@@ -35,7 +35,8 @@
             </header>
 
             <section class="contentsection">
-                <p>Thank you for using Rocket 21. See you soon!</p>
+                <p>Thank you for using BOOSTFX. See you soon!</p>
+                <a href="mainpage.html">Back To Home</a>
             </section>
         </main>
     </div>
