--- a/logout.html
+++ b/logout.html
@@ -36,7 +36,7 @@
 
             <section class="contentsection">
                 <p>Thank you for using BOOSTFX. See you soon!</p>
-                <a href="mainpage.html">Back To Home</a>
+                <a href="index.html">Back To Home</a>
             </section>
         </main>
     </div>
