--- a/blogs.html
+++ b/blogs.html
@@ -39,7 +39,7 @@
                     <p class="blogdate">Posted on 12 March 2024</p>
                     <h3>Forex vs. Stocks: What's the Difference, and Which One Is Right for You?</h3>
                     <p>Wondering which asset to trade? Here, we compare Forex vs. stocks. We’ll look at how they operate and when one might be a good fit for you.</p>
-                    <button class="readmore"><a href="https://www.cmcmarkets.com/en/trading-guides/forex-vs-stocks#:~:text=The%20forex%20market%20is%20far,that%20could%20have%20adverse%20effects."">Read More</a> </button>
+                    <button class="readmore"><a href="https://www.cmcmarkets.com/en/trading-guides/forex-vs-stocks#:~:text=The%20forex%20market%20is%20far,that%20could%20have%20adverse%20effects.">Read More</a> </button>
                 </div>
             </div>
 
@@ -49,7 +49,7 @@
                     <p class="blogdate">Posted on 10 March 2024</p>
                     <h3>Funding Your Trading Strategies: The Benefits of Simulated Trading</h3>
                     <p>Looking for a risk-free environment to test your trading strategy? Consider simulated trading. Learn how it works and how much you can earn with it.</p>
-                    <button class="readmore">   <a href="https://www.investopedia.com/articles/stocks/08/stock-simulator.asp">Read More </a></button>
+                    <button class="readmore"><a href="https://www.investopedia.com/articles/stocks/08/stock-simulator.asp">Read More </a></button>
                 </div>
             </div>
 
