--- a/profile.html
+++ b/profile.html
@@ -16,7 +16,7 @@
             </div>
             <nav class="navmenu">
                 <ul>
-                    <li><a href="home.html">Home</a></li>
+                    <li><a href="mainpage.html">Overview</a></li>
                     <li><a href="profile.html">Profile</a></li>
                     <li><a href="orders.html">Orders</a></li>
                     <li><a href="withdrawals.html">Withdrawals</a></li>
