--- a/profile.html
+++ b/profile.html
@@ -38,12 +38,12 @@
                 <form class="profileform">
                     <div class="formgroup">
                         <label for="username">Username:</label>
-                        <input type="text" id="username" name="username" value="Michael Cofer" readonly>
+                        <input type="text" id="username" name="username" value="Bryan" readonly>
                     </div>
 
                     <div class="formgroup">
                         <label for="email">Email:</label>
-                        <input type="email" id="email" name="email" value="michael.cofer@example.com">
+                        <input type="email" id="email" name="email" value="23010840@myrp.edu.sg">
                     </div>
 
                     <div class="formgroup">
