--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
             </header>
     </header>
     <main>
-        <section class="hero">
-            <div class="hero-content">
+        <section class="section">
+            <div class="sectioncontent">
                 <h2>BOOST YOUR TRADING SKILLS</h2>
-                <a href="pricing.html" class="cta-button">TAKE OUR CHALLENGE</a>
+                <a href="pricing.html" class="ctabutton">TAKE OUR CHALLENGE</a>
             </div>
             
         </section>
